--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ portable-pty = "0.8"
 
 # Async runtime
 tokio = { version = "1", features = ["full"] }
+pollster = "0.4"
 
 # GPU rendering
 wgpu = "24"
