--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ bytemuck = { version = "1", features = ["derive"] }
 # Config
 toml = "0.8"
 serde = { version = "1", features = ["derive"] }
+dirs = "6"
 
 # AI providers
 reqwest = { version = "0.12", features = ["json", "stream"] }
